[metadata]
name = Tyche
version = 0.1.1
author = Paddy Lamont
author_email = padraiglamont@gmail.com
url = https://github.com/TycheLibrary/Tyche
description = Tyche is a library to facilitate the use of aleatoric description logic to construct, query, and update probabilistic belief models.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = probability, belief, knowledge-base, ontology, description-logic
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy

[options.package_data]
* = README.md

[options.packages.find]
exclude =
    examples*
    docs*
